5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4141/executions/1585_2894.log
== TEST (2019-03-21 11:40:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var = float(input("instruções: jogo = 10 "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo * 8 + 45

# Impressao do valor total:
print(var)
-- ERROR:
File "XXXX", line 5
    var = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var = float(input(" jogo = 10 "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo * 8 + 45

# Impressao do valor total:
print(var)
-- ERROR:
File "XXXX", line 5
    var = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var = float(input("10"))

# Calculo do valor a ser pago, incluindo o frete:
total = 10 * 8 + 45

# Impressao do valor total:
print(var)
-- ERROR:
File "XXXX", line 5
    var = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var = float(input("10"))

# Calculo do valor a ser pago, incluindo o frete:
total = 10 * 8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    var = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var = float(input(10))

# Calculo do valor a ser pago, incluindo o frete:
total = 10 * 8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    var = float(input(10))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(10))

# Calculo do valor a ser pago, incluindo o frete:
total = 10 * 8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
10125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:25) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( jog = 10))

# Calculo do valor a ser pago, incluindo o frete:
total = 10 * 8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = float(input( jog = 10))
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = (input( jog = 10))

# Calculo do valor a ser pago, incluindo o frete:
total = 10 * 8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = (input( jog = 10))
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = (input( jogo = 10))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo * 8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = (input( jogo = 10))
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( jogo = 100))

# Calculo do valor a ser pago, incluindo o frete:
total =

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total =
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:47:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( jogo = 100))

# Calculo do valor a ser pago, incluindo o frete:
total =

# Impressao do valor total:
print()
-- EXECUTION TIME:
0.192665
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 8
    total =
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:47:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( jogo = 100))

# Calculo do valor a ser pago, incluindo o frete:
total =

# Impressao do valor total:
print()
-- ERROR:
File "XXXX", line 8
    total =
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:52:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var = input(" x = 100")

# Calculo do valor a ser pago, incluindo o frete:
total =float ( x * 8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    var = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var = input("x = 100")

# Calculo do valor a ser pago, incluindo o frete:
total =float ( x * 8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    var = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
input("x = 100")

# Calculo do valor a ser pago, incluindo o frete:
total =float ( x * 8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total =float ( x * 8 + 45)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
input("x = 100")

# Calculo do valor a ser pago, incluindo o frete:
total =float ( x * 8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total =float ( x * 8 + 45)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
input("x = 100")

# Calculo do valor a ser pago, incluindo o frete:
total =float (x* 8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total =float (x* 8 + 45)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
input("x = 100")

# Calculo do valor a ser pago, incluindo o frete:
total =float (x * 8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total =float (x * 8 + 45)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:54) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
input("x = 100")

# Calculo do valor a ser pago, incluindo o frete:
total =float (x * 8) + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total =float (x * 8) + 45
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:56:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
input("x = 100")

# Calculo do valor a ser pago, incluindo o frete:
total =float ("x" * 8) + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total =float ("x" * 8) + 45
ValueError: could not convert string to float: 'xxxxxxxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:59:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = float(input("entre"))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + 45.0

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:00:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = float(input("entre"))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + 45.0 * 8

# Impressao do valor total:
print(total)
-- OUTPUT:
361.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:00:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = float(input("entre"))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + 45.0 * 8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.110721
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
361.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
716.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124347.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:01:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = float(input("entre"))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + 45.0

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:01:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = float(input("entre"))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + 45.0

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.113408
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:02:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = float(input("entre"))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo + 45.0) * 8
# Impressao do valor total:
print(total)
-- OUTPUT:
369.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:02:54) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = float(input("entre"))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo * 8 + 45.0
# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 10
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:03:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = float(input("entre"))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo * 8) + 45.0
# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:03:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = float(input("entre"))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo * 8) + 45.0
# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.121029
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
